--- a/LabW6Group10_2and3_questions.ipynb
+++ b/LabW6Group10_2and3_questions.ipynb
@@ -1060,8 +1060,10 @@
     "        person2.state = Healthy(person2)\n",
     "        \n",
     "        person1.interact(person2)\n",
-    "        result_state = person2.state\n",
-    "        self.assertIsInstance(result_state, Healthy)"
+    "        result_state1 = person1.state\n",
+    "        result_state2 = person2.state\n",
+    "        self.assertIsInstance(result_state1, Healthy)\n",
+    "        self.assertIsInstance(result_state2, Healthy)"
    ]
   },
   {
@@ -1211,7 +1213,7 @@
      "text": [
       ".........\n",
       "----------------------------------------------------------------------\n",
-      "Ran 9 tests in 0.006s\n",
+      "Ran 9 tests in 0.004s\n",
       "\n",
       "OK\n"
      ]
