added tests for task 4

--- a/LabW6Group10.ipynb
+++ b/LabW6Group10.ipynb
@@ -205,7 +205,7 @@
     "\n",
     "\n",
     "class AsymptomaticSick(State):\n",
-    "    DAYS_SICK_TO_FEEL_BAD = 10\n",
+    "    DAYS_SICK_TO_FEEL_BAD = 2\n",
     "    \n",
     "    def __init__(self, person):\n",
     "        super().__init__(person)\n",
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,10 +1069,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class SymptomsAppear(unittest.TestCase):\n",
+    "    \n",
+    "    def test_symptoms_SARSCoV2(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([], observer)\n",
+    "        person = DefaultPerson(health_dept=health_dept)\n",
+    "        \n",
+    "        person.virus = get_infectable(InfectableType.SARSCoV2)\n",
+    "        person.state = AsymptomaticSick(person)\n",
+    "        \n",
+    "        person.night_actions()\n",
+    "        person.day_actions()\n",
+    "        person.night_actions()\n",
+    "        person.day_actions()\n",
+    "        person.night_actions()\n",
+    "        result_state = person.state\n",
+    "        self.assertIsInstance(result_state, SymptomaticSick)\n",
+    "        \n",
+    "    \n",
+    "    def test_symptoms_Cholera(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([], observer)\n",
+    "        person = DefaultPerson(health_dept=health_dept)\n",
+    "        \n",
+    "        person.virus = get_infectable(InfectableType.Cholera)\n",
+    "        person.state = AsymptomaticSick(person)\n",
+    "        \n",
+    "        person.night_actions()\n",
+    "        person.day_actions()\n",
+    "        person.night_actions()\n",
+    "        person.day_actions()\n",
+    "        person.night_actions()\n",
+    "        result_state = person.state\n",
+    "        self.assertIsInstance(result_state, SymptomaticSick)\n",
+    "    \n",
+    "    \n",
+    "    def test_symptoms_SeasonalFlu(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([], observer)\n",
+    "        person = DefaultPerson(health_dept=health_dept)\n",
+    "        \n",
+    "        person.virus = get_infectable(InfectableType.SeasonalFlu)\n",
+    "        person.state = AsymptomaticSick(person)\n",
+    "        \n",
+    "        person.night_actions()\n",
+    "        person.day_actions()\n",
+    "        person.night_actions()\n",
+    "        person.day_actions()\n",
+    "        person.night_actions()\n",
+    "        result_state = person.state\n",
+    "        self.assertIsInstance(result_state, SymptomaticSick)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1097,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,16 +1187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      ".....\n",
+      "........\n",
       "----------------------------------------------------------------------\n",
-      "Ran 5 tests in 0.006s\n",
+      "Ran 8 tests in 0.008s\n",
       "\n",
       "OK\n"
      ]
