added tests for tasks 2 and 3

--- a/LabW6Group10.ipynb
+++ b/LabW6Group10.ipynb
@@ -1044,7 +1044,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class PersonContactHealthyPerson(unittest.TestCase):\n",
+    "    \n",
+    "    def test_healthyPerson(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([], observer)\n",
+    "        \n",
+    "        person1 = DefaultPerson(health_dept = health_dept)\n",
+    "        person2 = DefaultPerson(health_dept = health_dept)\n",
+    "        \n",
+    "        person1.virus = None\n",
+    "        person1.state = Healthy(person1)\n",
+    "        person2.virus = None\n",
+    "        person2.state = Healthy(person2)\n",
+    "        \n",
+    "        person1.interact(person2)\n",
+    "        result_state1 = person1.state\n",
+    "        result_state2 = person2.state\n",
+    "        self.assertIsInstance(result_state1, Healthy)\n",
+    "        self.assertIsInstance(result_state2, Healthy)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1058,7 +1078,57 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class PersonContactPersonWithAntibodies(unittest.TestCase):\n",
+    "    \n",
+    "    def testPersonWithAntibidies_SeasonalFlu(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([], observer)\n",
+    "        \n",
+    "        person1 = DefaultPerson(health_dept = health_dept)\n",
+    "        person2 = DefaultPerson(health_dept = health_dept)\n",
+    "        \n",
+    "        person1.virus = get_infectable(InfectableType.SeasonalFlu)\n",
+    "        person1.state = SymptomaticSick(person1)\n",
+    "        person2.antibody_types = get_infectable(InfectableType.SeasonalFlu)\n",
+    "        person2.state = Healthy(person2)\n",
+    "        \n",
+    "        person2.interact(person2)\n",
+    "        result_state = person2.state\n",
+    "        self.assertIsInstance(result_state, Healthy) \n",
+    "        \n",
+    "    def testPersonWithAntibidies_SARSCoV2(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([], observer)\n",
+    "        \n",
+    "        person1 = DefaultPerson(health_dept = health_dept)\n",
+    "        person2 = DefaultPerson(health_dept = health_dept)\n",
+    "        \n",
+    "        person1.virus = get_infectable(InfectableType.SARSCoV2)\n",
+    "        person1.state = SymptomaticSick(person1)\n",
+    "        person2.antibody_types = get_infectable(InfectableType.SARSCoV2)\n",
+    "        person2.state = Healthy(person2)\n",
+    "        \n",
+    "        person2.interact(person2)\n",
+    "        result_state = person2.state\n",
+    "        self.assertIsInstance(result_state, Healthy) \n",
+    "    \n",
+    "    def testPersonWithAntibidies_Cholera(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([], observer)\n",
+    "        \n",
+    "        person1 = DefaultPerson(health_dept = health_dept)\n",
+    "        person2 = DefaultPerson(health_dept = health_dept)\n",
+    "        \n",
+    "        person1.virus = get_infectable(InfectableType.Cholera)\n",
+    "        person1.state = SymptomaticSick(person1)\n",
+    "        person2.antibody_types = get_infectable(InfectableType.Cholera)\n",
+    "        person2.state = Healthy(person2)\n",
+    "        \n",
+    "        person2.interact(person2)\n",
+    "        result_state = person2.state\n",
+    "        self.assertIsInstance(result_state, Healthy)"
+   ]
   },
   {
    "cell_type": "markdown",
