--- a/LabW6Group10.ipynb
+++ b/LabW6Group10.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
     "\n",
     "\n",
     "class AsymptomaticSick(State):\n",
-    "    DAYS_SICK_TO_FEEL_BAD = 10\n",
+    "    DAYS_SICK_TO_FEEL_BAD = 2\n",
     "    \n",
     "    def __init__(self, person):\n",
     "        super().__init__(person)\n",
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,10 +1083,12 @@
     "        person.virus = get_infectable(InfectableType.SARSCoV2)\n",
     "        person.state = AsymptomaticSick(person)\n",
     "        \n",
-    "        person.day_actions()\n",
-    "        person.day_actions()\n",
+    "        for _ in range(3):    \n",
+    "            person.day_actions()\n",
+    "            person.night_actions()\n",
+    "        \n",
     "        result_state = person.state\n",
-    "        self.assertIsInstance(result_state, AsymptomaticSick)\n",
+    "        self.assertIsInstance(result_state, SymptomaticSick)\n",
     "        \n",
     "    \n",
     "    def test_symptoms_Cholera(self):\n",
@@ -1097,10 +1099,12 @@
     "        person.virus = get_infectable(InfectableType.Cholera)\n",
     "        person.state = AsymptomaticSick(person)\n",
     "        \n",
-    "        person.day_actions()\n",
-    "        person.day_actions()\n",
+    "        for _ in range(3):    \n",
+    "            person.day_actions()\n",
+    "            person.night_actions()\n",
+    "        \n",
     "        result_state = person.state\n",
-    "        self.assertIsInstance(result_state, AsymptomaticSick)\n",
+    "        self.assertIsInstance(result_state, SymptomaticSick)\n",
     "    \n",
     "    \n",
     "    def test_symptoms_SeasonalFlu(self):\n",
@@ -1111,10 +1115,12 @@
     "        person.virus = get_infectable(InfectableType.SeasonalFlu)\n",
     "        person.state = AsymptomaticSick(person)\n",
     "        \n",
-    "        person.day_actions()\n",
-    "        person.day_actions()\n",
+    "        for _ in range(3):    \n",
+    "            person.day_actions()\n",
+    "            person.night_actions()\n",
+    "        \n",
     "        result_state = person.state\n",
-    "        self.assertIsInstance(result_state, AsymptomaticSick)"
+    "        self.assertIsInstance(result_state, SymptomaticSick)"
    ]
   },
   {
@@ -1126,13 +1132,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "class FromSickToHealthy(unittest.TestCase):\n",
     "    \n",
-    "    def IsCured_SARSCoV2(self):\n",
+    "    def test_IsCured_SARSCoV2(self):\n",
     "        observer = create_observer()\n",
     "        health_dept = create_department_of_health([], observer)\n",
     "        person = DefaultPerson(health_dept=health_dept)\n",
@@ -1142,10 +1148,11 @@
     "        person.virus.strength = 0\n",
     "        \n",
     "        person.day_actions()\n",
+    "        person.night_actions()\n",
     "        result_state = person.state\n",
     "        self.assertIsInstance(result_state, Healthy)\n",
     "        \n",
-    "    def IsCured_Cholera(self):\n",
+    "    def test_IsCured_Cholera(self):\n",
     "        observer = create_observer()\n",
     "        health_dept = create_department_of_health([], observer)\n",
     "        person = DefaultPerson(health_dept=health_dept)\n",
@@ -1155,10 +1162,11 @@
     "        person.virus.strength = 0\n",
     "        \n",
     "        person.day_actions()\n",
+    "        person.night_actions()\n",
     "        result_state = person.state\n",
     "        self.assertIsInstance(result_state, Healthy)\n",
     "        \n",
-    "    def IsCured_SeasonalFlu(self):\n",
+    "    def test_IsCured_SeasonalFlu(self):\n",
     "        observer = create_observer()\n",
     "        health_dept = create_department_of_health([], observer)\n",
     "        person = DefaultPerson(health_dept=health_dept)\n",
@@ -1168,6 +1176,7 @@
     "        person.virus.strength = 0\n",
     "        \n",
     "        person.day_actions()\n",
+    "        person.night_actions()\n",
     "        result_state = person.state\n",
     "        self.assertIsInstance(result_state, Healthy)"
    ]
@@ -1181,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,16 +1226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "........\n",
+      "...........\n",
       "----------------------------------------------------------------------\n",
-      "Ran 8 tests in 0.006s\n",
+      "Ran 11 tests in 0.009s\n",
       "\n",
       "OK\n"
      ]
