added test for task 5

--- a/LabW6Group10.ipynb
+++ b/LabW6Group10.ipynb
@@ -1205,10 +1205,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class FromSickToHealthy(unittest.TestCase):\n",
+    "    \n",
+    "    def test_IsCured_SARSCoV2(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([], observer)\n",
+    "        person = DefaultPerson(health_dept=health_dept)\n",
+    "        \n",
+    "        person.virus = get_infectable(InfectableType.SARSCoV2)\n",
+    "        person.state = SymptomaticSick(person)\n",
+    "        person.virus.strength = 0\n",
+    "        \n",
+    "        person.day_actions()\n",
+    "        person.night_actions()\n",
+    "        result_state = person.state\n",
+    "        self.assertIsInstance(result_state, Healthy)\n",
+    "        \n",
+    "    def test_IsCured_Cholera(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([], observer)\n",
+    "        person = DefaultPerson(health_dept=health_dept)\n",
+    "        \n",
+    "        person.virus = get_infectable(InfectableType.Cholera)\n",
+    "        person.state = SymptomaticSick(person)\n",
+    "        person.virus.strength = 0\n",
+    "        \n",
+    "        person.day_actions()\n",
+    "        person.night_actions()\n",
+    "        result_state = person.state\n",
+    "        self.assertIsInstance(result_state, Healthy)\n",
+    "        \n",
+    "    def test_IsCured_SeasonalFlu(self):\n",
+    "        observer = create_observer()\n",
+    "        health_dept = create_department_of_health([], observer)\n",
+    "        person = DefaultPerson(health_dept=health_dept)\n",
+    "        \n",
+    "        person.virus = get_infectable(InfectableType.SeasonalFlu)\n",
+    "        person.state = SymptomaticSick(person)\n",
+    "        person.virus.strength = 0\n",
+    "        \n",
+    "        person.day_actions()\n",
+    "        person.night_actions()\n",
+    "        result_state = person.state\n",
+    "        self.assertIsInstance(result_state, Healthy)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1219,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,16 +1301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "............\n",
+      "...............\n",
       "----------------------------------------------------------------------\n",
-      "Ran 12 tests in 0.010s\n",
+      "Ran 15 tests in 0.010s\n",
       "\n",
       "OK\n"
      ]
