added cells for optional functionality

--- a/LabW6Group10.ipynb
+++ b/LabW6Group10.ipynb
@@ -973,6 +973,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Mandatory functionality"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1. Persons should be able to transmit infections when infected (without symptoms or with symptoms), meaning that other Persons shall be able to get infected (change their health state from healthy to infected (without symptoms) when contacted by a person with a virus)."
    ]
   },
@@ -1298,6 +1305,69 @@
     "        \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optional functionality"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Each day a person infected (with symptoms) with a seasonal flu or SARS-CoV-2 will demonstrate an increase in temperature, and a person infected (with symptoms) with cholera will demonstrate a water loss."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Each night a virus of a person who is infected (with symptoms) will demonstrate a loss of strength by a factor inversely proportional to that person’s age (can check this roughly)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. A person shall have an antibody of the same type as his virus, if his virus has obtained strength below zero."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. A person shall be hospitalized (added to a list of patients in a hospital) if his health conditions are infected (with symptoms) and his health state (temperature or water level) is exceeding a life threatening threshold."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
