added tests for 1 opt task

--- a/LabW6Group10.ipynb
+++ b/LabW6Group10.ipynb
@@ -346,7 +346,7 @@
     "\n",
     "class SeasonalFluVirus(Infectable):\n",
     "    def cause_symptoms(self, person: Person):\n",
-    "        person.temperature = 38.0\n",
+    "        person.temperature += 1.0\n",
     "        \n",
     "    def get_type(self):\n",
     "        return InfectableType.SeasonalFlu\n",
@@ -989,13 +989,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PersonGetInfectedCase(unittest.TestCase): \n",
+    "class PersonGetInfectedCase(unittest.TestCase):\n",
     "    \n",
+    "    @classmethod  \n",
+    "    def setUpClass(cls):  \n",
+    "        cls.observer = create_observer()\n",
+    "        cls.health_dept = create_department_of_health([], cls.observer)\n",
+    "        \n",
+    "        \n",
     "    def test_healthy(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
-    "        person1 = DefaultPerson(health_dept=health_dept)\n",
-    "        person2 = DefaultPerson(health_dept=health_dept)\n",
+    "        person1 = DefaultPerson(health_dept=self.health_dept)\n",
+    "        person2 = DefaultPerson(health_dept=self.health_dept)\n",
     "        \n",
     "        person1.virus = None\n",
     "        person1.state = Healthy(person1)\n",
@@ -1008,10 +1012,8 @@
     "        \n",
     "        \n",
     "    def test_asymptomatic(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
-    "        person1 = DefaultPerson(health_dept=health_dept)\n",
-    "        person2 = DefaultPerson(health_dept=health_dept)\n",
+    "        person1 = DefaultPerson(health_dept=self.health_dept)\n",
+    "        person2 = DefaultPerson(health_dept=self.health_dept)\n",
     "        \n",
     "        person1.virus = get_infectable(InfectableType.SeasonalFlu)\n",
     "        person1.state = AsymptomaticSick(person1)\n",
@@ -1024,10 +1026,8 @@
     "        \n",
     "        \n",
     "    def test_symptomatic(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
-    "        person1 = DefaultPerson(health_dept=health_dept)\n",
-    "        person2 = DefaultPerson(health_dept=health_dept)\n",
+    "        person1 = DefaultPerson(health_dept=self.health_dept)\n",
+    "        person2 = DefaultPerson(health_dept=self.health_dept)\n",
     "        \n",
     "        person1.virus = get_infectable(InfectableType.SeasonalFlu)\n",
     "        person1.state = SymptomaticSick(person1)\n",
@@ -1054,12 +1054,15 @@
    "source": [
     "class PersonContactHealthyPerson(unittest.TestCase):\n",
     "    \n",
-    "    def test_healthyPerson(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
+    "    @classmethod  \n",
+    "    def setUpClass(cls):  \n",
+    "        cls.observer = create_observer()\n",
+    "        cls.health_dept = create_department_of_health([], cls.observer)\n",
     "        \n",
-    "        person1 = DefaultPerson(health_dept = health_dept)\n",
-    "        person2 = DefaultPerson(health_dept = health_dept)\n",
+    "    \n",
+    "    def test_healthyPerson(self):\n",
+    "        person1 = DefaultPerson(health_dept = self.health_dept)\n",
+    "        person2 = DefaultPerson(health_dept = self.health_dept)\n",
     "        \n",
     "        person1.virus = None\n",
     "        person1.state = Healthy(person1)\n",
@@ -1088,12 +1091,15 @@
    "source": [
     "class PersonContactPersonWithAntibodies(unittest.TestCase):\n",
     "    \n",
-    "    def testPersonWithAntibidies_SeasonalFlu(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
+    "    @classmethod  \n",
+    "    def setUpClass(cls):  \n",
+    "        cls.observer = create_observer()\n",
+    "        cls.health_dept = create_department_of_health([], cls.observer)\n",
     "        \n",
-    "        person1 = DefaultPerson(health_dept = health_dept)\n",
-    "        person2 = DefaultPerson(health_dept = health_dept)\n",
+    "    \n",
+    "    def testPersonWithAntibidies_SeasonalFlu(self):\n",
+    "        person1 = DefaultPerson(health_dept = self.health_dept)\n",
+    "        person2 = DefaultPerson(health_dept = self.health_dept)\n",
     "        \n",
     "        person1.virus = get_infectable(InfectableType.SeasonalFlu)\n",
     "        person1.state = SymptomaticSick(person1)\n",
@@ -1105,11 +1111,8 @@
     "        self.assertIsInstance(result_state, Healthy) \n",
     "        \n",
     "    def testPersonWithAntibidies_SARSCoV2(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
-    "        \n",
-    "        person1 = DefaultPerson(health_dept = health_dept)\n",
-    "        person2 = DefaultPerson(health_dept = health_dept)\n",
+    "        person1 = DefaultPerson(health_dept = self.health_dept)\n",
+    "        person2 = DefaultPerson(health_dept = self.health_dept)\n",
     "        \n",
     "        person1.virus = get_infectable(InfectableType.SARSCoV2)\n",
     "        person1.state = SymptomaticSick(person1)\n",
@@ -1120,12 +1123,9 @@
     "        result_state = person2.state\n",
     "        self.assertIsInstance(result_state, Healthy) \n",
     "    \n",
-    "    def testPersonWithAntibidies_Cholera(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
-    "        \n",
-    "        person1 = DefaultPerson(health_dept = health_dept)\n",
-    "        person2 = DefaultPerson(health_dept = health_dept)\n",
+    "    def testPersonWithAntibidies_Cholera(self):        \n",
+    "        person1 = DefaultPerson(health_dept = self.health_dept)\n",
+    "        person2 = DefaultPerson(health_dept = self.health_dept)\n",
     "        \n",
     "        person1.virus = get_infectable(InfectableType.Cholera)\n",
     "        person1.state = SymptomaticSick(person1)\n",
@@ -1152,10 +1152,14 @@
    "source": [
     "class SymptomsAppear(unittest.TestCase):\n",
     "    \n",
+    "    @classmethod  \n",
+    "    def setUpClass(cls):  \n",
+    "        cls.observer = create_observer()\n",
+    "        cls.health_dept = create_department_of_health([], cls.observer)\n",
+    "        \n",
+    "    \n",
     "    def test_symptoms_SARSCoV2(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
-    "        person = DefaultPerson(health_dept=health_dept)\n",
+    "        person = DefaultPerson(health_dept=self.health_dept)\n",
     "        \n",
     "        person.virus = get_infectable(InfectableType.SARSCoV2)\n",
     "        person.state = AsymptomaticSick(person)\n",
@@ -1170,9 +1174,7 @@
     "        \n",
     "    \n",
     "    def test_symptoms_Cholera(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
-    "        person = DefaultPerson(health_dept=health_dept)\n",
+    "        person = DefaultPerson(health_dept=self.health_dept)\n",
     "        \n",
     "        person.virus = get_infectable(InfectableType.Cholera)\n",
     "        person.state = AsymptomaticSick(person)\n",
@@ -1187,9 +1189,7 @@
     "    \n",
     "    \n",
     "    def test_symptoms_SeasonalFlu(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
-    "        person = DefaultPerson(health_dept=health_dept)\n",
+    "        person = DefaultPerson(health_dept=self.health_dept)\n",
     "        \n",
     "        person.virus = get_infectable(InfectableType.SeasonalFlu)\n",
     "        person.state = AsymptomaticSick(person)\n",
@@ -1218,10 +1218,14 @@
    "source": [
     "class FromSickToHealthy(unittest.TestCase):\n",
     "    \n",
+    "    @classmethod  \n",
+    "    def setUpClass(cls):  \n",
+    "        cls.observer = create_observer()\n",
+    "        cls.health_dept = create_department_of_health([], cls.observer)\n",
+    "        \n",
+    "    \n",
     "    def test_IsCured_SARSCoV2(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
-    "        person = DefaultPerson(health_dept=health_dept)\n",
+    "        person = DefaultPerson(health_dept=self.health_dept)\n",
     "        \n",
     "        person.virus = get_infectable(InfectableType.SARSCoV2)\n",
     "        person.state = SymptomaticSick(person)\n",
@@ -1233,9 +1237,7 @@
     "        self.assertIsInstance(result_state, Healthy)\n",
     "        \n",
     "    def test_IsCured_Cholera(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
-    "        person = DefaultPerson(health_dept=health_dept)\n",
+    "        person = DefaultPerson(health_dept=self.health_dept)\n",
     "        \n",
     "        person.virus = get_infectable(InfectableType.Cholera)\n",
     "        person.state = SymptomaticSick(person)\n",
@@ -1247,9 +1249,7 @@
     "        self.assertIsInstance(result_state, Healthy)\n",
     "        \n",
     "    def test_IsCured_SeasonalFlu(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
-    "        person = DefaultPerson(health_dept=health_dept)\n",
+    "        person = DefaultPerson(health_dept=self.health_dept)\n",
     "        \n",
     "        person.virus = get_infectable(InfectableType.SeasonalFlu)\n",
     "        person.state = SymptomaticSick(person)\n",
@@ -1274,12 +1274,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PersonBecomeDead(unittest.TestCase): \n",
+    "class PersonBecomeDead(unittest.TestCase):\n",
+    "    \n",
+    "    @classmethod  \n",
+    "    def setUpClass(cls):  \n",
+    "        cls.observer = create_observer()\n",
+    "        cls.health_dept = create_department_of_health([], cls.observer)\n",
+    "        \n",
     "    \n",
     "    def test_temperature(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
-    "        person = DefaultPerson(health_dept=health_dept)\n",
+    "        person = DefaultPerson(health_dept=self.health_dept)\n",
     "        \n",
     "        person.virus = get_infectable(InfectableType.SARSCoV2)\n",
     "        person.state = SymptomaticSick(person)\n",
@@ -1291,9 +1295,7 @@
     "        \n",
     "       \n",
     "    def test_water(self):\n",
-    "        observer = create_observer()\n",
-    "        health_dept = create_department_of_health([], observer)\n",
-    "        person = DefaultPerson(health_dept=health_dept)\n",
+    "        person = DefaultPerson(health_dept=self.health_dept)\n",
     "        \n",
     "        person.virus = get_infectable(InfectableType.Cholera)\n",
     "        person.state = SymptomaticSick(person)\n",
@@ -1322,10 +1324,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class PersonGettingAffected(unittest.TestCase):\n",
+    "    \n",
+    "    @classmethod  \n",
+    "    def setUpClass(cls):  \n",
+    "        cls.observer = create_observer()\n",
+    "        cls.health_dept = create_department_of_health([], cls.observer)\n",
+    "        \n",
+    "    def test_symptoms_SeasonalFlu(self):\n",
+    "        person = DefaultPerson(health_dept=self.health_dept)\n",
+    "        person.virus = get_infectable(InfectableType.SeasonalFlu)\n",
+    "        person.state = SymptomaticSick(person)\n",
+    "        \n",
+    "        init_status = person.temperature\n",
+    "        person.day_actions()\n",
+    "        result_status = person.temperature\n",
+    "        \n",
+    "        self.assertTrue(result_status > init_status)\n",
+    "    \n",
+    "    def test_symptoms_SARSCoV2(self):\n",
+    "        person = DefaultPerson(health_dept=self.health_dept)\n",
+    "        person.virus = get_infectable(InfectableType.SARSCoV2)\n",
+    "        person.state = SymptomaticSick(person)\n",
+    "        \n",
+    "        init_status = person.temperature\n",
+    "        person.day_actions()\n",
+    "        result_status = person.temperature\n",
+    "        \n",
+    "        self.assertTrue(result_status > init_status)\n",
+    "        \n",
+    "       \n",
+    "    def test_symptoms_Cholera(self):\n",
+    "        person = DefaultPerson(health_dept=self.health_dept)\n",
+    "        person.virus = get_infectable(InfectableType.Cholera)\n",
+    "        person.state = SymptomaticSick(person)\n",
+    "        \n",
+    "        init_status = person.water\n",
+    "        person.day_actions()\n",
+    "        result_status = person.water\n",
+    "        \n",
+    "        self.assertTrue(result_status < init_status)\n",
+    "        \n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1371,18 +1416,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "...............\n",
+      "............F.....\n",
+      "======================================================================\n",
+      "FAIL: test_symptoms_Cholera (__main__.PersonGettingAffected)\n",
       "----------------------------------------------------------------------\n",
-      "Ran 15 tests in 0.010s\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-23-f31e1bd12a3f>\", line 40, in test_symptoms_Cholera\n",
+      "    self.assertTrue(result_status < init_status)\n",
+      "AssertionError: False is not true\n",
       "\n",
-      "OK\n"
+      "----------------------------------------------------------------------\n",
+      "Ran 18 tests in 0.013s\n",
+      "\n",
+      "FAILED (failures=1)\n"
      ]
     }
    ],
